--- a/org-setup.org
+++ b/org-setup.org
@@ -146,7 +146,7 @@ The following code provides the capture templates when I add TODO tasks. Best pl
      ("tT" "Todo (with headline choice)" entry (function sprazza/org-get-target-headline)
       "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
      ("tr" "Ticklers/Reminders" entry (file+headline (lambda() (concat org-directory "/general.org")) "Ticklers")
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
+      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t)
      ("m" "Meeting templates")
      ("mp" "People Leaders" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "People Leaders")
       "* MEETING :MEETING:\n** Date: %^u\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n** Mood assessment\n" :clock-in nil :clock-resume t)
