--- a/org-setup.org
+++ b/org-setup.org
@@ -59,6 +59,7 @@ The default directory for org files is ~/org, and I'm going to stick with that c
    org-agenda-files '(
                       "~/github/org/waiting-for.org" "~/github/org/refile.org" "~/github/org/issue-tracking.org" "~/github/org/habits-and-schedules.org" "~/github/org/general.org" "~/github/org/analysis.org" "~/github/org/someday.org" "~/github/org/meetings.org"
                       )
+   org-agenda-scheduled-leaders '("" "Sched.%2dx: ")
    )
 #+END_SRC
 
@@ -148,14 +149,14 @@ The following code provides the capture templates when I add TODO tasks. Best pl
      ("tr" "Ticklers/Reminders" entry (file+headline (lambda() (concat org-directory "/general.org")) "Ticklers")
       "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t)
      ("m" "Meeting templates")
-     ("mp" "People Leaders" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "People Leaders")
-      "* MEETING :MEETING:\n** Date: %^u\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n** Mood assessment\n" :clock-in nil :clock-resume t)
-     ("mg" "General Meeting" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "General Meetings")
-      "* MEETING Topic: %? :MEETING:\n** Date: %^u\n** Attendees: Steve Lane\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t)
+     ("mp" "People Leaders" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "People Leaders" "2025/2026")
+      "* MEETING People Leaders - %^u\n SCHEDULED: %^T\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
+     ("mg" "General Meeting" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "General Meetings" "2025/2026")
+      "* MEETING Topic: %?\n SCHEDULED: %^T\n** Attendees: SL\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
      ("mr" "Regular One-on-one's" entry (file+function (lambda() (concat org-directory "/meetings.org")) sprazza/org-get-target-headline)
-      "* MEETING Regular meeting with %? :MEETING:\n** Date: %^u\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t)
-     ("mw" "Weekly Review" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "Weekly Review")
-      "* MEETING Weekly Review - %^u :MEETING:\n** Attendees: Steve, Sally, Ryan, Jason, Seb\n** Notes Prior\n*** All\n*** Ryan\n*** Sally\n*** Jason\n*** Seb\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t)
+      "* MEETING Regular meeting with %?\n SCHEDULED: %^T\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
+     ("mw" "Weekly Review" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "Weekly Review" "2025/2026")
+      "* MEETING Weekly Review - %^u\n SCHEDULED: %^T\n** Attendees: SL, SD, JS, Seb, TB\n** Notes Prior\n*** All\n*** Toki\n*** Sally\n*** Jason\n*** Seb\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
      ("j" "Journal Club" entry (file org-journal-file)
       "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("P" "Professional development templates")
@@ -330,7 +331,7 @@ This next bit of setup uses [[https://github.com/alphapapa/org-super-agenda][~or
                         (org-agenda-skip-scheduled-if-deadline-is-shown t)
                         (org-super-agenda-groups
                          '((:discard (:todo ("DONE" "CANCELLED")))
-                           (:discard (:tag "MEETING"))
+                           ;; (:discard (:tag "MEETING"))
                            (:name "Today"
                                   :time-grid t
                                   :todo "TODAY"
