get rid of clock-ins on org capture

--- a/org-setup.org
+++ b/org-setup.org
@@ -143,31 +143,31 @@ The following code provides the capture templates when I add TODO tasks. Best pl
    org-capture-templates
    '(("t" "Todo's and other general notes")
      ("tt" "Todo (inbox/to refile)" entry (file org-default-notes-file)
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
+      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t :empty-lines 1)
      ("tT" "Todo (with headline choice)" entry (function sprazza/org-get-target-headline)
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
+      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("tr" "Ticklers/Reminders" entry (file+headline (lambda() (concat org-directory "/general.org")) "Ticklers")
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t)
+      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("m" "Meeting templates")
      ("mp" "People Leaders" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "People Leaders" "2025/2026")
-      "* MEETING People Leaders - %^u\n SCHEDULED: %^T\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
+      "* MEETING People Leaders - %^u\n SCHEDULED: %^T\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("mg" "General Meeting" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "General Meetings" "2025/2026")
-      "* MEETING Topic: %?\n SCHEDULED: %^T\n** Attendees: SL\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
+      "* MEETING Topic: %?\n SCHEDULED: %^T\n** Attendees: SL\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("mr" "Regular One-on-one's" entry (file+function (lambda() (concat org-directory "/meetings.org")) sprazza/org-get-target-headline)
-      "* MEETING Regular meeting with %?\n SCHEDULED: %^T\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
+      "* MEETING Regular meeting with %?\n SCHEDULED: %^T\n** Notes Prior\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("mw" "Weekly Review" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "Weekly Review" "2025/2026")
-      "* MEETING Weekly Review - %^u\n SCHEDULED: %^T\n** Attendees: SL, SD, JS, Seb, TB\n** Notes Prior\n*** All\n*** Toki\n*** Sally\n*** Jason\n*** Seb\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t)
+      "* MEETING Weekly Review - %^u\n SCHEDULED: %^T\n** Attendees: SL, SD, JS, Seb, TB\n** Notes Prior\n*** All\n*** Toki\n*** Sally\n*** Jason\n*** Seb\n** Notes During\n*** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("j" "Journal Club" entry (file org-journal-file)
-      "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
+      "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("P" "Professional development templates")
      ("Ps" "Seminar" entry (file+headline (lambda() (concat org-directory "/professional-development.org")) "Seminars")
-      "* Title: %?\n** Date: %^u\n** Speaker: \n** Notes\n" :clock-in t :clock-resume t)
+      "* Title: %?\n** Date: %^u\n** Speaker: \n** Notes\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("Pw" "Workshop" entry (file+headline (lambda() (concat org-directory "/professional-development.org")) "Workshops")
-      "* Title: %?\n** Date: %^u\n** Presenter: " :clock-in t :clock-resume t)
+      "* Title: %?\n** Date: %^u\n** Presenter: " :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("i" "Issue tracking" entry (file (lambda() (concat org-directory "/issue-tracking.org")))
-      "* TODO %^{Title}\n%^{Type}p\nCaptured: %u\n** Description\n" :clock-in nil :clock-resume t)
+      "* TODO %^{Title}\n%^{Type}p\nCaptured: %u\n** Description\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("J" "Journal wins/losses" entry (file+function (lambda() (concat org-directory "/wins-and-losses.org")) sprazza/org-get-target-headline)
-    "* %u\n** %U\n%?" :clock-in nil)
+      "* %u\n** %U\n%?" :clock-in nil :jump-to-captured t :empty-lines 1)
      )
    ;; Keep a line between headers
    org-cycle-separator-lines 1
