remove annotation markers in capture template

--- a/org-setup.org
+++ b/org-setup.org
@@ -143,11 +143,11 @@ The following code provides the capture templates when I add TODO tasks. Best pl
    org-capture-templates
    '(("t" "Todo's and other general notes")
      ("tt" "Todo (inbox/to refile)" entry (file org-default-notes-file)
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t :empty-lines 1)
+      "* TODO %?\nCaptured: %u\n" :clock-in nil :clock-resume t :empty-lines 1)
      ("tT" "Todo (with headline choice)" entry (function sprazza/org-get-target-headline)
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
+      "* TODO %?\nCaptured: %u\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("tr" "Ticklers/Reminders" entry (file+headline (lambda() (concat org-directory "/general.org")) "Ticklers")
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
+      "* TODO %?\nCaptured: %u\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
      ("m" "Meeting templates")
      ("mp" "People Leaders" entry (file+olp (lambda() (concat org-directory "/meetings.org")) "People Leaders" "2025/2026")
       "* MEETING People Leaders - %^u\n SCHEDULED: %^T\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n** Mood assessment\n" :clock-in nil :clock-resume t :jump-to-captured t :empty-lines 1)
